# DevaNixClaudeCode

./: .gitignore  .steward_sessie  CLAUDE.md  Cargo.toml  CuiperArchitectuur.md  CuiperConfig.env  CuiperKantoor.csv  CuiperKantoor.datalog  CuiperKantoor.json  CuiperKantoor.jsonl  CuiperKantoor.md  CuiperKantoor.nix  CuiperKantoor.sql  CuiperKantoor.txt  README.md  prompts.md
.claude/: settings.json
backlog/: CuiperBacklog.md  CuiperClaudeCodeTakenlijst.md
crates/cuiper-bus/: Cargo.toml
crates/cuiper-bus/src/: lib.rs  namespace.rs  signaal.rs
crates/cuiper-core/: Cargo.toml
crates/cuiper-core/src/: bewaker.rs  cuip.rs  donut.rs  entiteit.rs  hive.rs  io_bus.rs  lib.rs  mandaat.rs  markov.rs  tests.rs  wereld.rs  zelfcontrole.rs
crates/cuiper-datalog/: Cargo.toml
crates/cuiper-datalog/src/: databank.rs  feit.rs  lib.rs  motor.rs  regel.rs  tests.rs
crates/cuiper-router/: Cargo.toml
crates/cuiper-router/src/: brug.rs  lib.rs  router.rs  routeregel.rs  tests.rs
docs/: CuiperAGINixOSHandleiding.md  CuiperGenesis-bouwplan.md  CuiperGenesis-filosofie.md  CuiperGenesis-functioneel.md  CuiperGenesis-technisch.md
logs/bouw/: 01KNN7NNMPPWJCSQZC0Y2R5N82-verwacht.txt
logs/context/: ClaudeCodeContext.jsonl  ClaudeCodeContext.md
logs/prompts/: CuiperPrompts-reconstructie-2026-04.json  CuiperPrompts-reconstructie-2026-04.jsonl
logs/trail/: CuiperSessieNr.txt  prompt_session_count.txt  prompt_session_history.txt
logs/wezen/: CuiperWezen.jsonl
nixos/: flake.nix
nixos/clients/: ai-werkstation.nix  minimal.nix  standaard.nix
nixos/db/: 001_port_conflict_registry.sql  002_CuiperOerOntologie.sql  003_CuiperEntiteitenTabel.sql  004_CuiperTaalSyntax.sql  005_CuiperEntiteitenSeed.sql
nixos/home/: default.nix
nixos/modules/: CuiperDatabases.nix  CuiperDesktop.nix  CuiperDev.nix  CuiperHyperon.nix  CuiperJaeger.nix  CuiperNginx.nix  CuiperPorts.nix  CuiperServices.nix  CuiperSystem.nix  databases.nix  nginx.nix  services.nix  system.nix
nixos/scripts/: CuiperNieuwLabProject.sh  CuiperNieuweKlant.sh  CuiperSnapshot.sh  nieuw-lab-project.sh  nieuwe-klant.sh  snapshot.sh
ontologie/: ClaudeCodeContext.sql  CuiperHiveCoreOntologie.sql  CuiperOerOntologie.md  CuiperPromptOntologie.cypher  CuiperPromptOntologie.dl  CuiperPromptOntologie.mongo.js  CuiperPromptOntologie.psql  CuiperPromptOntologie.sql
sql/: 00_extensions.sql  01_functions_core.sql  02_tables_core.sql  03_tables_devices.sql  04_tables_mandaten.sql  05_tables_software.sql  06_tables_processen.sql  07_tables_installaties.sql  08_tables_geo.sql  09_functions_ops.sql  10_indexes.sql  11_seed.sql  99_main.sql
(+37 files in other folders)
