[workspace]
members = [
    "crates/cuiper-core",
    "crates/cuiper-bus",
    "crates/cuiper-datalog",
]
resolver = "2"

[workspace.package]
version     = "0.1.0"
edition     = "2021"
authors     = ["CuiperHive"]
license     = "MIT"
repository  = "https://github.com/nixdeva1-design/DevaNixClaudeCode"

[workspace.dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "1"
tracing     = "0.1"
tokio       = { version = "1", features = ["full"] }
