[package]
name        = "cuiper-datalog"
description = "CuiperHive Datalog/Prolog inferentie engine in Rust — geen Java"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
cuiper-core = { path = "../cuiper-core" }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
