[package]
name        = "cuiper-router"
description = "CuiperHive signaal routing engine — namespace isolatie enforcer"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
cuiper-core = { path = "../cuiper-core" }
cuiper-bus  = { path = "../cuiper-bus" }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
tokio       = { workspace = true }
